# beepcopy

./: LICENSE  README.md  pyproject.toml
docs/plans/: 2026-02-27-beepcopy-design.md  2026-02-27-beepcopy-implementation.md
src/beepcopy/: __init__.py  models.py  output.py  synthesizer.py  traverser.py
src/beepcopy/renderers/: __init__.py  retro.py  rhythm.py  techno.py
tests/: conftest.py  test_api.py  test_integration.py  test_models.py  test_output.py  test_renderers.py  test_rhythm_renderer.py  test_synthesizer.py  test_techno_renderer.py  test_traverser.py
