[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beepcopy"
version = "0.1.0"
description = "Listen to your data."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
play = ["simpleaudio>=1.0.4"]
dev = ["pytest>=7.0", "simpleaudio>=1.0.4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
